--- a/v2/patrodent/templates/atm.html
+++ b/v2/patrodent/templates/atm.html
@@ -1,10 +1,10 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block keywords %}ATM, ATM en Sevilla, dolor articular, chasquido articular, disfuncion mandibular, férula de descarga{% endblock %}
 
 {% block metadescription %}La articulación temporomandibular es el medio de unión de la mandíbula con el craneo{% endblock %}
 
-{% block title %}Problemas de articulación (ATM) - {% endblock %}
+{% block title %}Problemas de articulación temporomandibular (ATM) - {% endblock %}
 
 {% block content-title %}Problemas de articulación (ATM){% endblock %}
 
