--- a/v2/patrodent/templates/conocenos.html
+++ b/v2/patrodent/templates/conocenos.html
@@ -1,16 +1,16 @@
 {% extends "templates/base.html" %}
 
-{% block metadescription %}¿Quién es Patrocinio Gómez Martínez? ¿Cómo se ha formado?{% endblock %}
+{% block metadescription %}¿Quienes son las doctoras de la clínica? ¿Cómo se ha formado?{% endblock %}
 
 {% block class-patrodent-link %} active{% endblock %}
 
-{% block title %}Quién soy - {% endblock %}
+{% block title %}Conócenos - {% endblock %}
 
 {% block pageclass %}who{% endblock %}
 
 {% block footergallery %}
     <figure>
-        <a href="http://www.youtube.com/v/gt4ECC3SROg?autoplay=1" rel="shadowbox[quienSoy]" title="Títulos de Patrocinio Gómez">
+        <a href="https://www.youtube.com/watch?v=gt4ECC3SROg"  title="Títulos de Patrocinio Gómez" target="_blank">
             <img src="{{ STATIC_URL }}images/titulos.min.jpg" alt="Títulos de Patrocinio Gómez" title="Títulos de Patrocinio Gómez" />
         </a>
     </figure>
@@ -41,7 +41,6 @@
     <div class="wrapper">
         <div class="alpha prefix_1 grid_9">
             <div class="border-1">
-                <h4 class="margin-bot">Patrocinio Gómez</h4>
                 <figure class="img-style indent-bot2"><img src="{{ STATIC_URL }}images/patrocinio4.jpg" alt="" /></figure>
                 <div class="clear"></div>
                 <div class="wrapper indent-bot2">
@@ -50,7 +49,7 @@
                         <span class="afterBeforeText">C.V. Interactivo</span>
                     </figure>
                 </div>
-                <figure class="img-style indent-bot2"><img src="{{ STATIC_URL }}images/angela_patrocinio.jpg" alt="" /></figure>
+                <figure class="img-style indent-bot2"><img src="{{ STATIC_URL }}images/angela-conocenos.jpg" alt="" /></figure>
             </div>
         </div>
         <div class="grid_13 suffix_1 omega">
