--- a/v2/patrodent/templates/estetica.html
+++ b/v2/patrodent/templates/estetica.html
@@ -1,4 +1,4 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block keywords %}Estética dental, Estética dental Sevilla, Blanqueamiento dental, Blanqueamiento dental Sevilla, empastes esteticos, fundas de porcelana{% endblock %}
 
@@ -21,11 +21,11 @@
         No obstante, más que un mero caso estético, el estado de nuestra boca es una cuestión de salud, al cual debemos estar atentos, por lo que elegimos el material mas adecuado para cada caso en particular.
     </p>
     <p>
-        Técnica progresiva en composites (<strong>empastes esteticos</strong>) asi como las <strong>fundas de porcelana</strong>, el <strong>blanqueamiento dental</strong>, injertos y estética de encías y la <strong>ortodoncia</strong> han sufrido una gran evolución principalmente orientada hacia la estética, para satisfacer las demandas actuales de la población.
+        <strong>Los empastes estéticos</strong>, las <strong>Carillas y coronas de porcelana</strong>, <strong>el blanqueamiento dental</strong>,  la <strong>ortodoncia</strong>, así como, los injertos de encías,  han sufrido una gran evolución principalmente orientada hacia la estética, para satisfacer las demandas actuales de la población.
 
     </p>
     <p>
-        Hoy en día es posible realizar desde un sencillo blanqueamiento dental, hasta la reposición completa de todos los dientes y la transformación total de una sonrisa. Con éstos tratamientos podemos mejorar la imagen de la persona y su propia autoestima. Actualmente, tener una buena sonrisa es sinónimo de salud y bienestar social.
+        La auténtica revolución de la odontología estética ha sido dada gracias al <strong>software de diseño digital de la sonrisa</strong>. Esta técnica permite ver el resultado final de la sonrisa del paciente, como también, mejorar la precisión de los tratamientos que se deben realizar y que el paciente pueda <strong>valorar el resultado final </strong>de su sonrisa antes de empezar con el tratamiento.
     </p>
 {% endblock %}
 
