--- a/v2/patrodent/templates/implantes.html
+++ b/v2/patrodent/templates/implantes.html
@@ -1,12 +1,12 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block keywords %}Implantes, Implantes Sevilla, protesis fija, coronas, cerámica{% endblock %}
 
 {% block metadescription %}Los implantes son la manera más natural de sustituir dientes perdidos.{% endblock %}
 
-{% block title %}Implantes - {% endblock %}
+{% block title %}Cirugía oral e implantes - {% endblock %}
 
-{% block content-title %}Implantes{% endblock %}
+{% block content-title %}Cirugía oral e implantes{% endblock %}
 
 {% block content-body %}
     <p>
@@ -34,7 +34,7 @@
     </div>
     <div class="wrapper indent-bot2">
         <figure class="img-style img-indent">
-            <a href="http://www.youtube.com/v/M74Scwr4v7s?autoplay=1" rel="shadowbox[implantes]" title="Video Implantes Dentales">
+            <a href="http://www.youtube.com/watch?v=M74Scwr4v7s" title="Video Implantes Dentales" target="_blank">
                 <img src="{{ STATIC_URL }}images/video_implantes.jpg" alt="Video Implantes Dentales" title="Video Implantes Dentales" />
             </a>
             <span class="afterBeforeText">Video Implantes Dentales</span>
