--- a/v2/patrodent/templates/odontologia.html
+++ b/v2/patrodent/templates/odontologia.html
@@ -1,19 +1,16 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block keywords %}Odontología general, Odontología general en Sevilla, endodoncia, endodoncia Sevilla, quitar el nervio, matar el nervio, desvitalizar, Odontopediatría: Pulpotomía, tratamientos infantiles, control de habitos, logopedia{% endblock %}
 
 {% block metadescription %}La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales{% endblock %}
 
-{% block title %}Odontología General / Endodoncia - {% endblock %}
+{% block title %}Odontología General / Estética - {% endblock %}
 
-{% block content-title %}Odontología General - Endodoncia{% endblock %}
+{% block content-title %}Odontología General - Estética{% endblock %}
 
 {% block content-body %}
    <p>
-       La <strong>odontología conservadora y restauradora</strong> nos permite prevenir, detener y curar las <strong>caries</strong> dentales. La <strong>caries</strong> dental puede afectar levemente a la estructura dentaria, destruyendo únicamente el esmalte o progresar a estadios mas graves, invadiendo tejidos más profundos como son la dentina o la pulpa dental. El objetivo de la <strong>odontología conservadora</strong> es la reparación de los dientes dañados por <strong>caries</strong>, <strong>fracturas</strong>, <strong>traumatismos</strong> o <strong>erosiones mediante su reconstrucción</strong>. Para que se produzca una caries se necesitan 3 factores: Dientes susceptibles de carearse, azúcar en la dieta y bacterias cariogénicas.
-    </p>
-   <p>
-        En principio cuando el proceso es incipiente no presenta síntomas, pero, a medida que avanza y se aproxima al <strong>nervio</strong>, provoca sensibilidad al frío, posteriormente al calor, y acaba transformándose en dolor. Cuando el nervio está inflamado hablamos de <strong>pulpitis</strong>. Si el nervio no ha quedado afectado, el tratamiento adecuado es una <strong>obturación o reconstrucción</strong>, dependiendo de la magnitud de la caries. Si la caries ya ha llegado al nervio (pulpitis), hay que <strong>endodonciar</strong> la pieza dentaria afectada, que es lo que comúnmente llamamos <strong>“matar el nervio” (endodoncia)</strong>. 
+       La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales. La caries dental puede afectar levemente a la estructura dentaria, destruyendo únicamente el esmalte o progresar a estadios más graves, invadiendo tejidos más profundos como son la dentina o la pulpa dental. El objetivo de la odontología conservadora es la reparación de los dientes dañados por caries, fracturas, traumatismos o erosiones mediante su reconstrucción. Para que se produzca una caries se necesitan 3 factores: Dientes susceptibles de carearse, azúcar en la dieta y bacterias cariogénicas. 
     </p>
    <p>
         Para prevenir la caries se ha de acutar a diferentes niveles:
@@ -23,8 +20,27 @@
             <li>A nivel de bacterias, realizando un correcto cepillado dental.</li>
         </ol>
     </p>
+   <p>
+        Hay que acudir periódicamente al dentista para someterse a revisiones. De este modo las caries se pueden detectar en estado precoz y los tratamientos son menos agresivos. 
+    </p>
     <p>
-        Hay que acudir <strong>periódicamente</strong> al dentista para someterse a revisiones. De este modo las caries se pueden detectar en estado precoz y los tratamientos son menos agresivos.
+        En nuestra clínica tenemos todo informatizado. Disponemos de un programa de diseño digital de sonrisa en el que planificamos tu sonrisa mediante ordenador para que el paciente sepa previamente cómo quedará su sonrisa y poder opinar y hacer los cambios 
+    </p>
+    <p>
+        Actualmente, nuestros pacientes que acuden a la clínica dental demandan cada vez más resultados estéticos en sus dientes y tener una sonrisa perfecta. El paciente desea que la sonrisa parezca lo más natural posible, para que el resto no puedan percibir el tratamiento realizado. Fruto de esta necesidad y demanda por parte de nuestros pacientes, se siguen desarrollando nuevas tecnologías y técnicas odontológicas capaces de ayudarnos a lograr estos resultados.
+    </p>
+    <p>
+        La auténtica revolución de la odontología estética ha sido dada gracias al sistema software de diseño de la sonrisa, utilizado para el diseño digital de la sonrisa de nuestros pacientes.  
+    </p>
+    <p>
+        La técnica de diseño digital de la sonrisa permite ver el resultado final de la sonrisa del paciente, como también, mejorar la precisión de los tratamientos que se deben realizar y que el paciente pueda valorar el resultado final de su sonrisa antes de empezar con el tratamiento.  
+
+    </p>
+    <p>
+        El odontólogo puede estudiar las diferentes variantes estéticas en cuanto a color, tamaño, forma o posición del diente, y poder decantarse por la opción más adecuada según las características y expectativas del paciente. 
+    </p>
+    <p>
+        Dado que permite visualizar el resultado final del tratamiento del paciente, el odontólogo tiene un buen control, como también, una visión muy realista y cercana sobre el tratamiento a realizar.  
     </p>
 {% endblock %}
 
