--- a/v2/patrodent/templates/odontopediatria.html
+++ b/v2/patrodent/templates/odontopediatria.html
@@ -1,4 +1,4 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block title %}Odontopediatría - {% endblock %}
 
@@ -30,11 +30,11 @@
 
 {% block before-after %}
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/juguete1.jpg" alt="Juguete 1" title="Juguete 1"/>
+        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/odontopediatria1.jpg" alt="Odontopediatría 1" title="Odontopediatría 1"/>
         </figure>
     </div>
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/juguete2.jpg" alt="Juguete 2" title="Juguete 2"/>
+        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/odontopediatria2.jpg" alt="Odontopediatría 2" title="Odontopediatría 2"/>
         </figure>
     </div>
 {% endblock %}
