--- a/v2/patrodent/templates/ortodoncia.html
+++ b/v2/patrodent/templates/ortodoncia.html
@@ -1,4 +1,4 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block keywords %}Ortodoncia,Ortodoncia en Sevilla,braquets,ortopedia funcional{% endblock %}
 
@@ -9,21 +9,15 @@
 {% block content-title %}Ortodoncia{% endblock %}
 
 {% block content-body %}
-    <p>
-        La <strong>ortodoncia</strong> es una especialidad de la <strong>odontología</strong> que se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias (ortodoncia), así como las alteraciones esqueléticas del maxilar y la mandíbula (ortopedia). La corrección de los dientes y de las bases óseas se realiza mediante una serie de aparatos fijos (técnica <strong>braquets</strong>) y removibles para la <strong>ortopedia</strong>.
-    </p>
-    <p>
-        La <strong>ortodoncia</strong> no tiene edad límite de tratamiento. Los dientes se pueden corregir a cualquier edad. A los niños se les aconseja llevarlos al ortodoncista antes de los seis años para poder detectar alteraciones dentales o esqueléticas importantes de manera precoz y poder corregirlos fácilmente. Gracias a la ortodoncia podemos corregir una estética de la sonrisa muy satisfactoria y mejorar la imagen de cada persona.
-    </p>
-    <p>
-        El objetivo en los tratamientos de <strong>ortodoncia</strong> es colocar los dientes de una manera armónica en la boca, para conseguir una <strong>función perfecta</strong>. La corrección de los  dientes mal alineados son motivo de demanda cada vez mayor en nuestra sociedad en la que una bonita sonrisa es un valor de primer orden. Por otro lado, un buen engranaje dental puede favorecer la función bucal y puede prevenir molestias relacionadas con la <strong>articulación témporo-mandibular</strong>. 
-    </p>
-    <p>
-        Es preferible que la <strong>ortodoncia</strong> se lleve a cabo en pacientes muy jóvenes puesto que las posibilidades de tratamiento a esa edad son mayores, ya que en pleno crecimiento se pueden interceptar y prevenir las posibles maloclusiones. No obstante, cada vez son más los pacientes adultos que se deciden al tratamiento de ortodoncia porque desean mejorar su sonrisa y verse con sus dientes bien alineados. Muchas veces, la ortodoncia es la mejor opción antes de emprender la rehabilitación con prótesis dentales.
-    </p>
-    <p>
-        La <strong>ortopedia maxilar</strong> corrige la función para restablecer la forma, emplea fuerzas biologicas que determinan reflejos neuromusculares sobre los dientes y produce movimientos dentarios mediante estímulos de trasformación tisular por adaptación funcional. Antepone la función a la Estética. Emplea aparatos removibles que actúan sobre los dientes, labios, lengua, encías, paladar, piso de la boca, ATM, modificando las funciones de la Masticación, Deglución, Respiración, y Fonación del Aparato Masticatorio.
-    </p>
+<p>La <strong>ortodoncia</strong> se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias (ortodoncia), así como las alteraciones esqueléticas del maxilar y la mandíbula (ortopedia). La corrección de los dientes y de las bases óseas se realiza mediante una serie de aparatos fijos (técnica brackets) y removibles para la ortopedia (Twin-Block, Máscara facial).</p>
+
+<p>La <strong>ortodoncia</strong> no tiene edad límite de tratamiento. Los dientes se pueden corregir a cualquier edad. A los niños se les aconseja llevarlos al ortodoncista antes de los seis años para poder detectar alteraciones dentales o esqueléticas importantes de manera precoz y poder corregirlos fácilmente. En el caso de adultos, disponemos de sistemas de <strong>ortodoncia invisible y brackets estéticos.</strong></p>
+
+<p>Hace más de 20 años que contamos con un <strong>software digital de ortodoncia</strong>, para el <strong>diagnóstico</strong> de los diferentes planes de tratamiento (NemoCeph). Igualmente contamos con el <strong>software de diseño de sonrisa digital (DSD)</strong>, con el que el paciente puede ver previamente el resultado final que tendrá su sonrisa.</p>
+
+<p>El objetivo en los tratamientos de <strong>ortodoncia</strong> es colocar los dientes de una manera armónica en la boca, para conseguir una <strong>función perfecta</strong>. La corrección de los dientes mal alineados son motivo de demanda cada vez mayor en nuestra sociedad en la que una bonita sonrisa es un valor de primer orden. Por otro lado, un buen engranaje dental puede favorecer la función bucal y puede prevenir molestias relacionadas con la <strong>articulación temporomandibular.</strong></p>
+
+<p>La <strong>ortopedia maxilar</strong> corrige la función para restablecer la forma, emplea fuerzas biológicas que determinan reflejos neuromusculares sobre los dientes y produce movimientos dentarios mediante estímulos de trasformación tisular por adaptación funcional. Antepone la función a la Estética. Emplea aparatos removibles que actúan sobre los dientes, labios, lengua, encías, paladar, piso de la boca, ATM, modificando las funciones de la Masticación, Deglución, Respiración, y Fonación del Aparato Masticatorio.</p>
 {% endblock %}
 
 {% block before-after %}
