--- a/v2/patrodent/templates/periodoncia.html
+++ b/v2/patrodent/templates/periodoncia.html
@@ -1,4 +1,4 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block keywords %}Periodoncia, Periodoncia Sevilla, Movilidad dentaria, piorrea, raspaje, curetaje, gingivectomía, encías{% endblock %}
 
