--- a/v2/patrodent/templates/protesis.html
+++ b/v2/patrodent/templates/protesis.html
@@ -1,12 +1,12 @@
-{% extends "templates/servicio.html" %}
+{% extends "templates/tratamiento.html" %}
 
 {% block keywords %}Protesis, Protesis Sevilla, Protesis fija, protesis removible, protesis esquelética, protesis parcial, protesis completa, coronas, fundas de porcelana{% endblock %}
 
 {% block metadescription %}La reposición de los dientes perdidos se hace mediante prótesis.{% endblock %}
 
-{% block title %}Protesis - {% endblock %}
+{% block title %}Prótesis dental e implantológica - {% endblock %}
 
-{% block content-title %}Protesis{% endblock %}
+{% block content-title %}Prótesis dental e implantológica{% endblock %}
 
 {% block content-body %}
     <p>
