--- a/v2/patrodent/templates/radiologia.html
+++ b/v2/patrodent/templates/radiologia.html
@@ -34,8 +34,8 @@
         </figure>
     </div>
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/radiologia_digital.jpg" alt="Radiología digital" title="Radiología digital"/>
-            <span class="afterBeforeText">Radiología digital</span>
+        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/cbct.jpg" alt="Radiología digital" title="Radiología digital"/>
+            <span class="afterBeforeText">CBCT</span>
         </figure>
     </div>
 {% endblock %}
