--- a/v2/patrodent/templates/templates/inc.servicios.html
+++ b/v2/patrodent/templates/templates/inc.servicios.html
@@ -1,18 +1,10 @@
-{% url template_view "ortodoncia" as ortodoncia_url %}
-{% url template_view "odontologia" as odontologia_url %}
-{% url template_view "odontopediatria" as odontopediatria_url %}
-{% url template_view "periodoncia" as periodoncia_url %}
-{% url template_view "implantes" as implantes_url %}
-{% url template_view "protesis" as protesis_url %}
-{% url template_view "estetica" as estetica_url %}
-{% url template_view "atm" as atm_url %}
+{% url template_view "financiacion" as financiacion_url %}
+{% url template_view "plan_salud" as plan_salud_url %}
 {% url template_view "radiologia" as radiologia_url %}
-<li><a href="{{ ortodoncia_url }}" {% ifequal ortodoncia_url full_path %} class="active"{% endifequal %}><i></i>Ortodoncia</a></li>
-<li><a href="{{ odontologia_url }}" {% ifequal odontologia_url full_path %} class="active"{% endifequal %}><i></i>Odontología General - Endodoncia</a></li>
-<li><a href="{{ odontopediatria_url }}" {% ifequal odontopediatria_url full_path %} class="active"{% endifequal %}><i></i>Odontopediatría</a></li>
-<li><a href="{{ periodoncia_url }}" {% ifequal periodoncia_url full_path %} class="active"{% endifequal %}><i></i>Periodoncia</a></li>
-<li><a href="{{ implantes_url }}" {% ifequal implantes_url full_path %} class="active"{% endifequal %}><i></i>Implantes</a></li>
-<li><a href="{{ protesis_url }}" {% ifequal protesis_url full_path %} class="active"{% endifequal %}><i></i>Prótesis</a></li>
-<li><a href="{{ estetica_url }}" {% ifequal estetica_url full_path %} class="active"{% endifequal %}><i></i>Estética dental y blanqueamiento</a></li>
-<li><a href="{{ atm_url }}" {% ifequal atm_url full_path %} class="active"{% endifequal %}><i></i>Problemas de articulación (ATM)</a></li>
+{% url template_view "software_diseno" as software_diseno_url %}
+{% url template_view "software_ortodoncia" as software_ortodoncia_url %}
+<li><a href="{{ financiacion_url }}" {% ifequal financiacion_url full_path %} class="active"{% endifequal %}><i></i>Financiación sin intereses</a></li>
+<li><a href="{{ plan_salud_url }}" {% ifequal plan_salud_url full_path %} class="active"{% endifequal %}><i></i>Plan de Salud Bucodental</a></li>
 <li><a href="{{ radiologia_url }}" {% ifequal radiologia_url full_path %} class="active"{% endifequal %}><i></i>Radiología digital</a></li>
+<li><a href="{{ software_diseno_url }}" {% ifequal software_diseno_url full_path %} class="active"{% endifequal %}><i></i>Software diseño de sonrisa digital</a></li>
+<li><a href="{{ software_ortodoncia_url }}" {% ifequal software_ortodoncia_url full_path %} class="active"{% endifequal %}><i></i>Software digital de ortodoncia</a></li>
