--- a/v2/patrodent/templates/templates/servicio.html
+++ b/v2/patrodent/templates/templates/servicio.html
@@ -99,7 +99,7 @@
         </a>
     </figure>
     <figure>
-        <a href="http://www.youtube.com/v/5-JuMRmbmXo?autoplay=1" rel="shadowbox[servicio]" title="Instalaciones de Patrodent">
+        <a href="http://www.youtube.com/watch?v=5-JuMRmbmXo" target="_blank" title="Instalaciones de Patrodent">
             <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
