Corrijo codificacion caracteres

--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -24,7 +24,7 @@
                             <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
                             <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
                             <dd><span>Teléfono:</span><a class="link" href="tel:954 21 14 22">954 21 14 22</a></dd>
-                            <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
+                            <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
                             <dd><span>Facebook:</span><a class="link" href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                         </dl>
                     </div>
