--- a/v2/patrodent/templates/endodoncia.html
+++ b/v2/patrodent/templates/endodoncia.html
@@ -14,7 +14,7 @@
             <p>
                 La endodoncia consiste en la desvitalización de la pieza dentaria. La vitalidad del diente la da lo que denominamos <strong>pulpa</strong>. Se localiza en su interior. Cuando ésta se inflama se produce una <strong>pulpitis</strong>. Ésta puede ser reversible o irreversible.
                 <ol class="levels">
-                    <li>La <strong>pulpitis reversible</strong>, como su propio nombre indica, suele remitir cuando eliminamos el agente causal que lo produce (una caries, un contacto anómalo de la pieza contra el antagonista…). El <strong>dolor</strong> se manifiesta sólo cuando la pieza está en contacto con el agente causal; una vez que se remite el agente causal, el dolor desaparece.</li>
+                    <li>La <strong>pulpitis reversible</strong>, como su propio nombre indica, suele remitir cuando eliminamos el agente causal que lo produce (una caries, un contacto anómalo de la pieza contra el antagonista...). El <strong>dolor</strong> se manifiesta sólo cuando la pieza está en contacto con el agente causal; una vez que se remite el agente causal, el dolor desaparece.</li>
                     <li>La <strong>pulpitis irreversible</strong> se manifiesta como un dolor continuo o espontáneo. Este tipo de pulpitis agudas son muy dolorosas. El tratamiento para este tipo de pulpitis sería la endodoncia (desvitalización de la pieza). </li>
                     <li>También puede ocurrir que la pieza esté <strong>necrótica</strong> y no tenga ningún tipo de dolor ni sensibilidad. Esto significa que la lesión ya es crónica; aún así esa pieza hay que tratarla ya que esta infectada, y el tratamiento es también la endodoncia.</li>
                 </ol>
