--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -137,7 +137,7 @@
                 <a href="{% url template_view "contacto" %}" class="{% block class-contacto-link2 %}{% endblock %}">Contacto</a>
                 <ul>
                     <li class="hideWhatsapp">
-                        <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
+                        <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
                     </li>
                     <li>
                         <a href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
@@ -159,7 +159,7 @@
                     <div class="fright">
                         <div class="slogon">
                             <div class="tel">Llamanos <span><a href="tel:954 21 14 22">954 21 14 22</a></span></div>
-                            <div class="whats noLinkWhatsapp">...o escribenos un <span><a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta">Whatsapp</a></span></div>
+                            <div class="whats noLinkWhatsapp">...o escribenos un <span><a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta">Whatsapp</a></span></div>
                             Estamos disponibles de 9 a 21 horas
                         </div>
                         <div class="clear"></div>
@@ -191,7 +191,7 @@
                                         <a href="{% url template_view "contacto" %}" class="{% block class-contacto-link %}{% endblock %}">Contacto</a>
                                         <ul>
                                             <li class="hideWhatsapp">
-                                                <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
+                                                <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
                                             </li>
                                             <li>
                                                 <a href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
@@ -275,7 +275,7 @@
                                     <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
                                     <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
                                     <dd><span>Teléfono:</span><a class="link" href="tel:954 21 14 22">954 21 14 22</a></dd>
-                                    <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
+                                    <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
                                     <dd><span>Facebook:</span><a class="link" href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                                 </dl>
                             </div>
