--- a/v2/patrodent/templates/conocenos.html
+++ b/v2/patrodent/templates/conocenos.html
@@ -62,8 +62,8 @@
             </p>
             <ul class="default">
                 <li>Licenciada por la Universidad de Sevilla en Medicina y Cirugía General (1974 - 1980)</li>
-                <li>Especialista en Estomatología por la Escuela de Estomatología de la Universidad de Sevilla (1980 – 1982)</li>
-                <li>DIPLÔME D´UNIVERSITÉ EN ORTHODONTIE por la Universidad de Nantes (1992 – 1995)</li>
+                <li>Especialista en Estomatología por la Escuela de Estomatología de la Universidad de Sevilla (1980 - 1982)</li>
+                <li>DIPLÔME D´UNIVERSITÉ EN ORTHODONTIE por la Universidad de Nantes (1992 - 1995)</li>
             </ul>
 
             <p><a href="{{ STATIC_URL }}files/curriculum_vitae_patrocinio.pdf" target="_blank">Ver curriculum completo</a></p>
@@ -76,7 +76,7 @@
                 <ul class="default">
                     <li>Grado en Odontología por la Universidad Europea de Madrid (2010-2015)</li>
                     <li>Título Experto en Implantes, Cirugía Oral y Rehabilitación Implantológica por la Universidad de Sevilla (2015-2016)</li>
-                    <li>Máster en Cirugía Bucal por la Universidad de Sevilla (2016 – 2019)</li>
+                    <li>Máster en Cirugía Bucal por la Universidad de Sevilla (2016 - 2019)</li>
                 </ul>
             </p>
             <p><a href="{{ STATIC_URL }}files/curriculum_vitae_angela.pdf" target="_blank">Ver curriculum completo</a></p>
