--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -31,13 +31,12 @@
                     <div class="slider">
                         <ul class="items">
                             <li><img src="{{ STATIC_URL }}images/logo_galeria.png" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/patrocinio_limpiando.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/equipo.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/equipo_operando.jpg" alt=""></li>
+                            <li><img src="{{ STATIC_URL }}images/patrocinio_y_angela.jpg" alt=""></li>
                             <li><img src="{{ STATIC_URL }}images/sala_de_esperas.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/recepcion_con_personal.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/conocenos.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/conocenos2.jpg" alt=""></li>
+                            <li><img src="{{ STATIC_URL }}images/recepcion3.jpg" alt=""></li>
+                            <li><img src="{{ STATIC_URL }}images/cristal.jpg" alt=""></li>
+                            <li><img src="{{ STATIC_URL }}images/patrocinio_y_angela2.jpg" alt=""></li>
+                            <li><img src="{{ STATIC_URL }}images/equipo.jpg" alt=""></li>
                         </ul>
                         <ul class="pagination">
                             <li><a href="#"><span>1</span></a></li>
@@ -47,7 +46,6 @@
                             <li><a href="#"><span>5</span></a></li>
                             <li><a href="#"><span>6</span></a></li>
                             <li><a href="#"><span>7</span></a></li>
-                            <li><a href="#"><span>8</span></a></li>
                         </ul>
                     </div>
                 </div>
