--- a/v2/patrodent/templates/templates/after_before/inc.odontologia.html
+++ b/v2/patrodent/templates/templates/after_before/inc.odontologia.html
@@ -3,8 +3,10 @@
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
+{% if all %}
 <div class="wrapper indent-bot2 afterAndBefore">
     <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/estetica_despues_2.jpg" alt="Caso real odontología conservadora" title="Caso real odontología conservadora" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
+{% endif %}
