--- a/v2/patrodent/templates/conocenos.html
+++ b/v2/patrodent/templates/conocenos.html
@@ -45,11 +45,17 @@
                 <div class="clear"></div>
                 <div class="wrapper indent-bot2">
                     <figure class="img-style img-indent">
-                        <iframe width="300" height="200" src="http://www.youtube.com/embed/gt4ECC3SROg?autoplay=1" frameborder="0" allowfullscreen></iframe>
-                        <span class="afterBeforeText">C.V. Interactivo</span>
+                        <iframe width="300" height="200" src="http://www.youtube.com/embed/j-zu4kHMklw?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                        <span class="afterBeforeText">Valores</span>
                     </figure>
                 </div>
-                <figure class="img-style indent-bot2"><img src="{{ STATIC_URL }}images/angela-conocenos.jpg" alt="" /></figure>
+                <figure class="img-style indent-bot2"><img src="{{ STATIC_URL }}images/angela-conocenos2.jpg" alt="" /></figure>
+                <div class="wrapper indent-bot2">
+                    <figure class="img-style img-indent">
+                        <iframe width="300" height="200" src="http://www.youtube.com/embed/DaudboD7-bw?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                        <span class="afterBeforeText">Vocación</span>
+                    </figure>
+                </div>
             </div>
         </div>
         <div class="grid_13 suffix_1 omega">
