--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -33,7 +33,7 @@
             <p>
             Cada uno de nuestros <strong>gabinetes</strong>, así como nuestras salas de rayos y de esterilización, se encuentran completamente equipados para poder ofrecer el máximo nivel de calidad y seguridad en todos nuestros tratamientos.
             </p>
-            <p>La sala de <strong>radiología digital</strong> esta completamente <strong>aislada</strong> e <strong>informatizada</strong> para la realización de panorex y telerradiografías. Radiología digital intraoral en todos los gabinetes. La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de  radiación que reciben nuestros pacientes.</p>
+            <p>La sala de <strong>radiología digital</strong> está completamente <strong>aislada</strong> e <strong>informatizada</strong> para la realización de radiografías extraorales 2D (panorex y teleradiografías), así como 3D (TAC). La radiología digital intraoral se realiza en todos los gabinetes. La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de radiación que reciben nuestros pacientes.</p>
             <p>Una <strong>sala de esterilización y limpieza del instrumental</strong>, junto con una zona de <strong>preparación de modelos de escayola</strong> (recortadora de modelos).
             Un <strong>despacho para la atención personal</strong> con el paciente, la recepción y la sala de espera muy confortable con pantalla de televisión y videos informativos, infantiles  y de recreo completan y amenizan su estancia en la clínica.
             </p>
