--- a/v2/patrodent/templates/odontologia.html
+++ b/v2/patrodent/templates/odontologia.html
@@ -10,41 +10,28 @@
 
 {% block content-body %}
    <p>
-       La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales. La caries dental puede afectar levemente a la estructura dentaria, destruyendo únicamente el esmalte o progresar a estadios más graves, invadiendo tejidos más profundos como son la dentina o la pulpa dental. El objetivo de la odontología conservadora es la reparación de los dientes dañados por caries, fracturas, traumatismos o erosiones mediante su reconstrucción. Para que se produzca una caries se necesitan 3 factores: Dientes susceptibles de carearse, azúcar en la dieta y bacterias cariogénicas. 
+       Es la manera más natural de sustituir <strong>dientes perdidos</strong>. Los <strong>implantes dentales</strong> son fijaciones de <strong>titanio</strong> que se colocan en el maxilar o en la mandíbula para sustituir los <strong>dientes ausentes</strong>.
     </p>
    <p>
-        Para prevenir la caries se ha de acutar a diferentes niveles:
-        <ol class="levels">
-            <li>A nivel de dientes, reforzando el esmalte con flúor (enjuagues, pastillas, fluorizaciones y pastas de dientes).</li>
-            <li>A nivel de dieta, disminuyendo el consumo de azúcar, sobre todo entre horas.</li>
-            <li>A nivel de bacterias, realizando un correcto cepillado dental.</li>
-        </ol>
+        Los <strong>implantes</strong> se intentan colocar en donde estaban las raíces de los dientes (son raíces artificiales). Sobre ellos colocaremos las <strong>coronas de cerámica</strong> para imitar los dientes naturales. De esta forma no tocamos los dientes vecinos a la zona desdentada con puentes convencionales, ni tenemos los inconvenientes de las prótesis removibles. Con los implantes dentales podemos sustituir desde dientes aislados hasta arcadas completamente desdentadas.
     </p>
    <p>
-        Hay que acudir periódicamente al dentista para someterse a revisiones. De este modo las caries se pueden detectar en estado precoz y los tratamientos son menos agresivos. 
-    </p>
-    <p>
-        En nuestra clínica tenemos todo informatizado. Disponemos de un programa de diseño digital de sonrisa en el que planificamos tu sonrisa mediante ordenador para que el paciente sepa previamente cómo quedará su sonrisa y poder opinar y hacer los cambios 
-    </p>
-    <p>
-        Actualmente, nuestros pacientes que acuden a la clínica dental demandan cada vez más resultados estéticos en sus dientes y tener una sonrisa perfecta. El paciente desea que la sonrisa parezca lo más natural posible, para que el resto no puedan percibir el tratamiento realizado. Fruto de esta necesidad y demanda por parte de nuestros pacientes, se siguen desarrollando nuevas tecnologías y técnicas odontológicas capaces de ayudarnos a lograr estos resultados.
-    </p>
-    <p>
-        La auténtica revolución de la odontología estética ha sido dada gracias al sistema software de diseño de la sonrisa, utilizado para el diseño digital de la sonrisa de nuestros pacientes.  
-    </p>
-    <p>
-        La técnica de diseño digital de la sonrisa permite ver el resultado final de la sonrisa del paciente, como también, mejorar la precisión de los tratamientos que se deben realizar y que el paciente pueda valorar el resultado final de su sonrisa antes de empezar con el tratamiento.  
-
-    </p>
-    <p>
-        El odontólogo puede estudiar las diferentes variantes estéticas en cuanto a color, tamaño, forma o posición del diente, y poder decantarse por la opción más adecuada según las características y expectativas del paciente. 
-    </p>
-    <p>
-        Dado que permite visualizar el resultado final del tratamiento del paciente, el odontólogo tiene un buen control, como también, una visión muy realista y cercana sobre el tratamiento a realizar.  
+        A veces se puede aprovechar el mismo momento de la extracción del diente deteriorado para colocar el implante en la misma sesión y así se evita el tener que realizar una segunda intervención. Los implantes colocados de esta manera se les denomina implantes inmediatos.
+        Este procedimiento se realiza bajo <strong>anestesia local</strong> (sin pérdida del conocimiento). La colocación de implantes no es dolorosa. En algunos casos puede generarse una pequeña inflamación de la zona que suele remitir en <strong>24-48 horas</strong>.
     </p>
 {% endblock %}
 
 {% block before-after %}
     {% include "templates/after_before/inc.odontologia.html" %}
+{% endblock %}
+
+{% block before-after-title %}
+    <div class="wrapper indent-bot2">
+        <figure class="img-style img-indent">
+            <iframe width="250" height="156" src="http://www.youtube.com/embed/sftZ6TXTO_o?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <span class="afterBeforeText"></span>
+        </figure>
+    </div>
+    {{block.super}}
 {% endblock %}
 
