--- a/v2/patrodent/templates/templates/after_before/inc.ortodoncia.html
+++ b/v2/patrodent/templates/templates/after_before/inc.ortodoncia.html
@@ -8,8 +8,10 @@
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
+{% if all %}
 <div class="wrapper indent-bot2 afterAndBefore">
     <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_3.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
+{% endif %}
