--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/animate-flip.css" type="text/css" media="all">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/shadowbox.css" type="text/css" media="all">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/superfish.css" media="all">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2" type="text/css" media="all">
    {% endblock %}
    {% block js %}
     <script src="{{ STATIC_URL }}js/jquery-1.7.2.min.js" type="text/javascript"></script>
@@ -140,7 +140,10 @@
                         <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
                     </li>
                     <li>
-                        <a href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
+                        <a href="https://www.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/clinicadentalpatrodent/" target="_blank">Instagram</a>
                     </li>
                 </ul>
             </li>
@@ -194,7 +197,10 @@
                                                 <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
                                             </li>
                                             <li>
-                                                <a href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
+                                                <a href="https://www.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.instagram.com/clinicadentalpatrodent/" target="_blank">Instagram</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -276,7 +282,8 @@
                                     <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
                                     <dd><span>Teléfono:</span><a class="link" href="tel:954 21 14 22">954 21 14 22</a></dd>
                                     <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
-                                    <dd><span>Facebook:</span><a class="link" href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
+                                    <dd><span>Facebook:</span><a class="link" href="https://www.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
+                                    <dd><span>Instagram:</span><a class="link" href="https://www.instagram.com/clinicadentalpatrodent/" target="_blank">clinicadentalpatrodent</a></dd>
                                 </dl>
                             </div>
                         </div>
