--- a/v2/patrodent/templates/templates/tratamiento.html
+++ b/v2/patrodent/templates/templates/tratamiento.html
@@ -48,7 +48,7 @@
         <div class="grid_7 suffix_1 omega">
             {% block before-after-title %}
                 <h4 class="margin-bot">Antes y después</h4>
-                <p> Pasa el <strong>ratón</strong> por encima de las imágenes (o tocalas desde tu movil o tablet) para ver el antes (casos reales)</p>
+                <p> Pasa el <strong>ratón</strong> por encima de las imágenes (o tócalas) para ver el antes (casos reales)</p>
             {% endblock %}
             <div class="imgswrapper">
                 {% block before-after %}
